change file strucutre

--- a/RUserGroup.html
+++ b/RUserGroup.html
@@ -42,14 +42,16 @@ Some simple examples:
 
 - base R supports reading text files, e.g. `read.table()`, `read.csv()`, `read.delim()` reads data from text files files with specified delimiters (commas, tabs, spaces, etc.)
 
-- Package `readr` also provides convenient similar functions with `read_*()` but is typically faster than base R
-  + It's part of the tidyverse collection of packages
+- Package **`readr`** also provides convenient similar functions with **`read_*()`** but is typically faster than base R
+  + Part of the tidyverse collection of packages
 
 ```r
-library(tidyverse)
+library(tidyverse) # the entire tidyverse
+
+library(readr) # if you just want readr but nothing else
 ```
   
-- `fread()` from package `data.table` is faster than both of the above, but syntax is less intuitive 
+- **`fread()`** from package **`data.table`** is faster than both of the above, but syntax is less intuitive 
 
 ---
 # How parsers work
@@ -71,10 +73,10 @@ library(tidyverse)
 - Name/Re-name columns
 
 - Check:
-  + Dimension to make sure all was read in correctly
-  + First and/or last few rows
-  + Structure of the dataframe to ensure data types are correct
-  + Numerical summaries
+  + Dimension to make sure all was read in correctly (  **`dim()`**  )
+  + First and/or last few rows (  **`head()`** and **`tail()`**  )
+  + Structure of the dataframe to ensure data types are correct ( **`str()`** )
+  + Numerical summaries (  **`summary()`**  )
 
 ---
 # Reading csv files
@@ -84,7 +86,7 @@ library(tidyverse)
 
 
 ```r
-cbb_games &lt;- read_csv('18collegebasketball.csv')
+cbb_games &lt;- read_csv('sample_data/18collegebasketball.csv')
 
 dim(cbb_games)
 ```
@@ -120,13 +122,13 @@ str(cbb_games)
 
 # Specifying column types:
 - Note that gameid is specified to be a numeric variable
-- By default, `read_csv()` will guess data types based on the first 1000 rows in the file.
+- By default, **`read_csv()`** will guess data types based on the first 1000 rows in the file.
 - If you want to instead specify the column types, use the `col_types` argument:
 
 
 ```r
 cbb_games &lt;- read_csv(
-  file = '18collegebasketball.csv',
+  file = 'sample_data/18collegebasketball.csv',
   col_types = list('gameid' = col_character())
   )
 
@@ -148,20 +150,20 @@ head(cbb_games)
 ---
 # type_convert()
 
-- If data isn't clean, may need to read it in and clean it before converting to the data type you want
+- If data isn't clean, may need to clean it before converting to desired data type
 
-- The `type_convert()` function is like the `col_types` argument in `read_*` but is used after the file is read into environment
+- The **`type_convert()`** function is like the `col_types` argument in `read_*` but is used *after* the file is read
 
 - Process:
-  + Read in data as character vector
-  + Cleaning/munging manually to remove extra characters / NAs / etc.
+  + Read in data as character vectors
+  + Clean manually to remove extra characters / NAs / etc.
   + `type_convert()` to convert to column types you want (or let it guess)
   
 - Ex) Want to split time into time + morning/night column, convert time to numeric:
 
 
 ```r
-read_csv('Ames_weather_2017_2018.csv' , col_types='ccccccc')
+read_csv('sample_data/Ames_weather_2017_2018.csv' , col_types='ccccccc')
 ```
 
 ```
@@ -186,7 +188,7 @@ read_csv('Ames_weather_2017_2018.csv' , col_types='ccccccc')
 
 ```r
 #read in as character, clean up times, then let readr convert
-read_csv('Ames_weather_2017_2018.csv',
+read_csv('sample_data/Ames_weather_2017_2018.csv',
          col_types='ccccccc') %&gt;%
   mutate(
     `AM/PM` = str_sub(time, start=-2L),
@@ -220,10 +222,9 @@ read_csv('Ames_weather_2017_2018.csv',
 
 ```r
 cbb_games &lt;- read.csv(
-  '18collegebasketball.csv',
+  'sample_data/18collegebasketball.csv',
   colClasses=c('character', 'character', 'integer',
-               'character', 'integer','character')
-  )
+               'character', 'integer','character'))
 
 str(cbb_games)
 ```
@@ -239,7 +240,7 @@ str(cbb_games)
 ```
 ---
 # Setting column names and row names
-- Get and set the names of your variables with `colnames()` or `names()`
+- Get and set the names of your variables with **`colnames()`** or **`names()`**
 
 
 ```r
@@ -267,32 +268,32 @@ head(cbb_games)
 - After cleaning up data or if you create a new variable, may need to parse the column into they type you want
   + Use `parse_*` to convert individual columns to the type you want (e.g., `parse_datetime`, `parse_double`, `parse_factor`)
   
-Typical process: 
-  1. Read in text as character strings
-  2. clean up NAs/regex/invalid data 
-  3. parse to desired format with `parse_*` for one vector or `type_convert()` for a data frame
+&lt;!-- Typical process:  --&gt;
+&lt;!--   1. Read in text as character strings --&gt;
+&lt;!--   2. clean up NAs/regex/invalid data  --&gt;
+&lt;!--   3. parse to desired format with `parse_*` for one vector or `type_convert()` for a data frame --&gt;
   
-- If there are problems parsing the data you read in, view them with `problems()`
+- If there are problems parsing the data you read in, view them with **`problems()`**
 
-- Want to save the column types from a dataframe and apply it to the next file you read in? Use `spec()`
+- Want to save the column types from a dataframe and apply it to the next file you read in? Use **`spec()`**
 
 ---
 # Other common file types / situations
 
 - For general tab/comma/whitespace delimited files: 
-  + `read.table()`/`read_table()` for tables separated by whitespace
-  + `read.delim()`/`read_delim()` and specify the delimiter with `delim` argument ('\t' for tabs, ' ' for space, etc.)
+  + **`read.table()`**/**`read_table()`** for tables separated by whitespace
+  + **`read.delim()`**/**`read_delim()`** and specify the delimiter with `delim` argument ('\t' for tabs, ' ' for space, etc.)
 
 
 
   
-- For fixed width files, `read.fwf`/`read_fwf()`
+- For fixed width files, **`read.fwf`**/**`read_fwf()`**
   + This format can be more compact often read faster than less-structured data
   
-- For unstructured text files, use `readLines()` or `read_lines()`
+- For unstructured text files, use **`readLines()`** or **`read_lines()`**
   + Useful if you know you don't have tabular data, but leaves a lot of manual work to do
 
-- For extra large files, `read_csv_chunked()` can read a file in chunks
+- For extra large files, **`read_csv_chunked()`** can read a file in chunks
   + Useful when you want to aggregate or filter a dataset without reading into memory
 
 ---
@@ -304,7 +305,7 @@ Typical process:
 f&lt;- function(x, pos) filter(x, home=='Kansas')
 
 #but do it in chunks of size 100
-KU &lt;- read_csv_chunked('18collegebasketball.csv',
+KU &lt;- read_csv_chunked('sample_data/18collegebasketball.csv',
                        callback = DataFrameCallback$new(f),
                        chunk_size=100,
                        col_types = cols())
@@ -362,7 +363,7 @@ read_csv("https://raw.githubusercontent.com/fivethirtyeight/data/master/congress
 
 
 ```r
-read_csv('18collegebasketball.csv',
+read_csv('sample_data/18collegebasketball.csv',
          col_names=c('gameid', 'home_team', 'home_score',
                      'away_team', 'away_score', 'date'),
          col_types=cols(),
@@ -385,24 +386,24 @@ read_csv('18collegebasketball.csv',
   labs(y='KU Margin of Victory')
 ```
 
-![](presentationslides_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+![](RUserGroup_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
 
 ---
 
-![](presentationslides_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
+![](RUserGroup_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
 
 ---
 
 # Reading from Excel files
-- Package `readxl` provides easy functions for reading MS Excel files
+- Package **`readxl`** provides easy functions for reading MS Excel files
 - Note it will only read one sheet, defaulting to the first unless specified
-- `read_xlsx` has similar arguments to `read_csv`
+- **`read_xlsx`** has similar arguments to **`read_csv`**
 - Example: Here, there are some notes at the top:
 
 
 
 ```r
-ex &lt;- readxl::read_xlsx('18collegebasketball.xlsx')
+ex &lt;- readxl::read_xlsx('sample_data/18collegebasketball.xlsx')
 ```
 
 ```r
@@ -427,7 +428,7 @@ head(ex)
 
 
 ```r
-readxl::read_xlsx('18collegebasketball.xlsx', skip = 2)
+readxl::read_xlsx('sample_data/18collegebasketball.xlsx', skip = 2)
 ```
 
 ```
@@ -453,7 +454,7 @@ readxl::read_xlsx('18collegebasketball.xlsx', skip = 2)
 # Writing files out
 - When you're done cleaning or analyzing your data, you can write the results out just like you got them in
 - If you are looking for a quick copy/paste, just use `print()` and set `row.names=FALSE`
-- Note: `write.csv()` writes row names by default, `write_csv()` does not
+- Note: **`write.csv()`** writes row names by default, **`write_csv()`** does not
 - If you are processing data in chunks, it may also be useful to write the output into the same file by setting `append=TRUE`
 
 
@@ -461,11 +462,12 @@ readxl::read_xlsx('18collegebasketball.xlsx', skip = 2)
 ```r
 write.csv(KU, 'KUgames1819.csv')
 write_csv(KU, 'KUgames1819.csv', append = TRUE)
+write_csv(KU, 'clipboard')
 ```
 
 ---
 # Writing Excel Files
-- The `writexl` package allows for writing data.frames to .xlsx files
+- The **`writexl`** package allows for writing data.frames to .xlsx files
 - If you pass a list of dataframes, it will write each dataframe to a separate sheet in the Excel file
 
 
@@ -489,29 +491,29 @@ write_xlsx(x=list("KU"=KU , "IowaState"=ISU),
 
 # data.table
 - If dealing with really large files (but still small enough to fit in RAM), data.table is as fast as it gets
-- Use `fread()` and `fwrite()`
+- Use **`fread()`** and **`fwrite()`**
 - Really only worth it to use this when files are large and speed becomes an issue
- + `data.table` structure and parsing (esp. for factors and date/time), not as convenient for analysis and manipulation
+ + **`data.table`** structure and parsing (esp. for factors and date/time), not as convenient for analysis and manipulation
 
 
 ```r
 s &lt;- Sys.time()
-rdr &lt;- readr::read_delim('accident.txt', delim='|', col_types=cols())
+rdr &lt;- readr::read_delim('sample_data/accident.txt', delim='|', col_types=cols())
 Sys.time()-s
 ```
 
 ```
-## Time difference of 0.1809411 secs
+## Time difference of 0.1496251 secs
 ```
 
 ```r
 s &lt;- Sys.time()
-dt &lt;- data.table::fread('accident.txt', sep='|')
+dt &lt;- data.table::fread('sample_data/accident.txt', sep='|')
 Sys.time()-s
 ```
 
 ```
-## Time difference of 0.01690793 secs
+## Time difference of 0.03587413 secs
 ```
 
 ---
@@ -525,12 +527,12 @@ Sys.time()-s
 
 - Reading data from the web via API or web scraping is becoming increasingly important
 - For web scraping and reading XML or HTML files, R offers several good packages
-- My personal favorites are `rvest` and `XML2`
+- My personal favorites are **`rvest`** and **`XML2`**
 ---
 # Reading html/XML
 - Web scraping in R is another topic entirely, but a quick example of how easy it can be
-- `read_html()` will read the entire html file
-- `html_table()` will find all tables in the page and parse into a list of data frames
+- **`read_html()`** will read the entire html file
+- **`html_table()`** will find all tables in the page and parse into a list of data frames
 - NYTimes results from the 2016 Election by KS county:
 
 
@@ -575,20 +577,20 @@ ggplot(data=kscountymap, aes(x = long, y = lat, group = subregion)) +
   scale_fill_gradient2(low="red", high="blue")
 ```
 
-![](presentationslides_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
+![](RUserGroup_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
 
 ---
 
-![](presentationslides_files/figure-html/unnamed-chunk-23-1.png)&lt;!-- --&gt;
+![](RUserGroup_files/figure-html/unnamed-chunk-23-1.png)&lt;!-- --&gt;
 
 ---
 # Converting JSON
 - Web data increasingly comes in JSON format for portability
-- Package `jsonlite` has useful functions for parsing this data
+- Package **`jsonlite`** has useful functions for parsing this data
 - Sometimes requires a little bit of extra munging work to get everything looking nice
 ---
 # Converting JSON
-- key functions are `fromJSON()` and `parse_json()` for reading, and `toJSON()` to go the other way
+- key functions are **`fromJSON()`** and **`parse_json()`** for reading, and **`toJSON()`** to go the other way
 - Ex using the NCEI weather data API:
 
 ```r
@@ -601,7 +603,7 @@ weather_data
 
 ```
 ## Response [https://www.ncei.noaa.gov/access/services/data/v1?dataset=global-marine&amp;dataTypes=WIND_DIR,WIND_SPEED&amp;stations=AUCE&amp;startDate=2016-01-01&amp;endDate=2016-01-02&amp;boundingBox=90,-180,-90,180&amp;format=json]
-##   Date: 2021-02-05 19:40
+##   Date: 2021-02-07 14:30
 ##   Status: 200
 ##   Content-Type: application/json;charset=utf-8
 ##   Size: 1.24 kB
@@ -650,12 +652,12 @@ str()
 
 # Reading from databases
 - Often, data is too big to fit into memory and you'll need to do some work in the database before you can read it in
-- R has several packages for doing so: `dbplyr`, `RSQLite`, `DBI`, `RODBC`, to name a few
+- R has several packages for doing so: **`dbplyr`**, **`RSQLite`**, **`DBI`**, **`RODBC`**, to name a few
 - Ex: Connecting and reading from a local database:
 
 ```r
 library(DBI)
-mydb &lt;- dbConnect(RSQLite::SQLite(), "ncaa2018-19.sqlite")
+mydb &lt;- dbConnect(RSQLite::SQLite(), "sample_data/ncaa2018-19.sqlite")
 
 query_for_the_db &lt;- 
 "SELECT Name, MP, PTS, TRB, AST
@@ -683,7 +685,7 @@ dbGetQuery(conn=mydb, statement = query_for_the_db)
 ---
 # Databases with dplyr
 - For some database types, dplyr verbs work and you can manipulate how you normally would without reading into memory
-- Then `collect()` the data at the end when you need it
+- Then **`collect()`** the data at the end when you need it
 
 ```r
 away_boxes &lt;- tbl(src = mydb,'awaybox')
